--- a/rhpam-cdc-service/README.html
+++ b/rhpam-cdc-service/README.html
@@ -765,7 +765,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <h2 id="_rhpam_task_variable_events_cdc_to_kafka_setup">RHPAM Task Variable Events CDC to Kafka Setup</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>For more detailed setup information, decisions, debugging look into link:https://github.com/skoussou/cdc-playground/tree/main/rhpam-cdc-service/RHPAM Task Variable Events CDC to Kafka.pdf[RHPAM Task Variable Events CDC to Kafka.pdf]</p>
+<p>For more detailed setup information, decisions, debugging look into <a href="https://github.com/skoussou/cdc-playground/tree/main/rhpam-cdc-service/RHPAM Task Variable Events CDC to Kafka.pdf">RHPAM Task Variable Events CDC to Kafka.pdf</a></p>
 </div>
 <div class="sect2">
 <h3 id="_prepare_environment">Prepare Environment</h3>
@@ -1339,7 +1339,7 @@ github.com/hifly81/saga-choreography-quarkus
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-01-29 11:46:29 UTC
+Last updated 2021-01-29 11:55:50 UTC
 </div>
 </div>
 </body>
